--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
             width: calc(100% - 22px);
         }
 
-        div > div {
+        #main-content > div {
             margin-bottom: 20px;
             padding: 15px;
             border: 1px solid #dddfe2;
