--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,33 @@
             text-align: center;
             padding: 20px;
         }
+
+        .calibration-action {
+            margin-top: 20px;
+        }
+
+        .input-group {
+            display: flex;
+            margin-top: 8px;
+        }
+
+        .input-group input {
+            flex-grow: 1;
+            margin-bottom: 0;
+            width: auto;
+        }
+
+        .input-group button {
+            width: auto;
+            margin-top: 0;
+            margin-left: 10px;
+            flex-shrink: 0;
+        }
+
+        #full-charge-btn {
+            width: auto;
+            margin-top: 0;
+        }
     </style>
 </head>
 <body>
@@ -300,11 +327,15 @@
                 </div>
                 <div>
                     <h2>Calibration</h2>
-                    <button id="full-charge-btn">Set Full Charge</button>
-                    <div>
+                    <div class="calibration-action">
+                        <button id="full-charge-btn">Set Full Charge</button>
+                    </div>
+                    <div class="calibration-action">
                         <label for="current-battery">Set Current Battery (%):</label>
-                        <input type="number" id="current-battery" min="0" max="100" step="1">
-                        <button id="set-battery-btn" style="width:auto;">Set</button>
+                        <div class="input-group">
+                            <input type="number" id="current-battery" min="0" max="100" step="1" placeholder="e.g., 80">
+                            <button id="set-battery-btn">Set</button>
+                        </div>
                     </div>
                 </div>
             `;
